# glassbox

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  DECISIONS.md  LICENSE-content.md  README.md  astro.config.mjs  gates.toml  package-lock.json  package.json
.github/workflows/: deploy.yml
derived/accumulate/: buggy.trace.json  clever.trace.json  procedural.trace.json
derived/aliasing/: buggy.trace.json  procedural.trace.json
derived/arithmetic/: buggy.trace.json  procedural.trace.json
derived/binary/: buggy.trace.json  places.trace.json
derived/bindecimal/: buggy.trace.json  procedural.trace.json
derived/booleanops/: buggy.trace.json  procedural.trace.json
derived/comparison/: buggy.trace.json  procedural.trace.json
derived/conversion/: buggy.trace.json  procedural.trace.json
derived/datatypes/: buggy.trace.json  procedural.trace.json
derived/elifladder/: buggy.trace.json  procedural.trace.json
derived/exponent/: buggy.trace.json  procedural.trace.json
derived/faulttolerance/: buggy.trace.json  procedural.trace.json
derived/filter/: buggy.trace.json  clever.trace.json  procedural.trace.json
derived/fizzbuzz/: buggy.trace.json  procedural.trace.json
derived/functions/: clever.trace.json  idiomatic.trace.json  naive.trace.json  procedural.trace.json
schemas/: lesson.schema.json  trace.schema.json
tracer/: pyproject.toml
tracer/src/glassbox_tracer/: __init__.py  build.py  snapshot.py  trace.py
tracer/tests/: test_build_checkpoints.py  test_snapshot.py  test_trace_functions.py  test_trace_partition.py  test_trace_swap.py
(+160 files in other folders)
