[project]
name = "glassbox-tracer"
version = "0.1.0"
description = "Build-time sys.settrace tracer: (source, inputs) -> schema-valid JSON execution trace"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
trace-lessons = "glassbox_tracer.build:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/glassbox_tracer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
